# server/api/controllers/config/services/servicesConfigController.js
@@ -4,23 +4,44 @@
 const RESOURCE = 'config/services';
 let dynamoHelper = new (require('api/api-utils/DynamoHelper'))(RESOURCE);
 
+/**
+ * GET /config/services
+ */
 function getServicesConfig(req, res, next) {
   const cluster = req.swagger.params.cluster.value;
-  return dynamoHelper.getAll({ OwningCluster: cluster }).then(data => res.json(data)).catch(next);
+  let filter = {};
+  if (cluster !== undefined) {
+    filter.OwningCluster = cluster;
+  }
+  return dynamoHelper.getAll(filter).then(data => res.json(data)).catch(next);
 }
 
-function getServiceConfigByName(req, res) {
-  res.json({});
+/**
+ * GET /config/services/{name}
+ */
+function getServiceConfigByName(req, res, next) {
+  const key = req.swagger.params.name.value;
+  const sortKey = req.swagger.params.cluster.value;
+  return dynamoHelper.getBySortKey(key, sortKey).then(data => res.json(data)).catch(next);
 }
 
 function postServicesConfig(req, res) {
   res.json();
 }
 
-function putServiceConfigByName(req, res) {
-  res.json();
+function putServiceConfigByName(req, res, next) {
+  const key = req.swagger.params.name.value;
+  const sortKey = req.swagger.params.cluster.value;
+  const user = req.user;
+  const expectedVersion = req.swagger.params['expected-version'].value;
+  const config = req.swagger.params.config.value;
+
+  return dynamoHelper.updateWithSortKey(config, key, sortKey, expectedVersion, user).then(data => res.json(data)).catch(next);
 }
 
+/**
+ * DELETE /config/services/{name}/{infra}
+ */
 function deleteServiceConfigByName(req, res) {
   res.json();
 }
